# Bitscrape

./: Bitscrape_Architecture.docx  Bitscrape_Docs.docx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  quotes.jsonl
.github/workflows/: ci.yml  publish.yml
bitscrape/: __init__.py  engine.py
bitscrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bitscrape/cli/: __init__.py  main.py
bitscrape/core/: __init__.py  models.py  settings.py  spider.py
bitscrape/downloader/: __init__.py  downloader.py
bitscrape/exporters/: __init__.py  feed.py
bitscrape/middleware/: __init__.py  middleware.py
bitscrape/parser/: __init__.py  selector.py
bitscrape/pipeline/: __init__.py  pipelines.py
bitscrape/scheduler/: __init__.py  dupefilter.py  scheduler.py
bitscrape/storage/: __init__.py
bitscrape/workflow/: __init__.py  graph.py
docs/: changelog.md  cli.md  contributing.md  distributed.md  downloader.md  engine.md  exporters.md  faq.md  index.md  installation.md  items.md  middleware.md  pipelines.md  publishing.md  quickstart.md  scheduler.md  selectors.md  settings.md  spiders.md  storage.md  workflow.md
examples/: ecommerce_spider.py  quotes_spider.py
tests/unit/: test_core.py
