[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitscrape"
version = "0.1.0"
description = "A modern, production-grade async web scraping framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["scraping", "crawler", "async", "pydantic", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "selectolax>=0.3",
    "lxml>=5.0",
    "click>=8.1",
    "rich>=13.0",
    "redis[asyncio]>=5.0",
    "asyncpg>=0.29",
    "langgraph>=0.1",
    "langchain-core>=0.2",
    "uvloop>=0.19; sys_platform != 'win32'",
    "orjson>=3.9",
    "tenacity>=8.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
playwright = ["playwright>=1.43"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "aioresponses>=0.7",
]

[project.scripts]
bitscrape = "bitscrape.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["bitscrape*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
