[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitscrape"
version = "0.1.0"
description = "A modern, production-grade async web scraping framework"
readme = "README.rst"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Sudharsan S M", email = "sudharsanmani423@gmail.com" }
]

keywords = [
    "web-scraping",
    "crawler",
    "async",
    "pydantic",
    "playwright",
    "automation",
    "data-extraction",
    "scrapy-alternative"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "selectolax>=0.3",
    "lxml>=5.0",
    "click>=8.1",
    "rich>=13.0",
    "orjson>=3.9",
    "tenacity>=8.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Sudharsansm/Bitscrape"
Documentation = "https://github.com/Sudharsansm/Bitscrape#readme"
Repository = "https://github.com/Sudharsansm/Bitscrape"
"Bug Tracker" = "https://github.com/Sudharsansm/Bitscrape/issues"
Changelog = "https://github.com/Sudharsansm/Bitscrape/releases"

[tool.setuptools]
packages = ["bitscrape"]
include-package-data = true

[tool.setuptools.package-data]
bitscrape = ["py.typed"]